Monday, 28th October 2002, Al Riddoch
	* Fix dispatcher removal for the imaginary emote ops fix made on the
	  9th. October.

Thursday, 24th October 2002, Al Riddoch
	* Add checks so it is possible for a connection to send and
	  receive when its status is DISCONNECTING.

Thursday, 24th October 2002, Simon Goodall
	* Clean up DebugDispatchers when deleting Connection object

Wednesday, 09th October 2002, Al Riddoch

	* src/ArgumentDispatcher.cpp: Prevent ArgumentDispatcher from
	  aborting if the object it is passed has no args.

	* src/Room.h, src/Room.cpp: Rework handling of imaginary emote
	  ops to be a bit more general.

Tuesday, September 17, Ron Steinke

	* Backed out fix for Connection seg fault, which was
	  causing problems

Friday, September 13, Ron Steinke

	* Added a check to Player::netConnected() that the current
          action is null before calling internalLogin(). This
          fixes a double login problem if someone else calls
          Player::Login() in a BaseConnection::Connected
          signal handler before the signal gets to
          Player::netConnected().

Sunday, September 1, Ron Steinke

	* Enhanced locking in Connection to prevent a segfault when
	  Connection::disconnect() is called inside a signal emitted
	  by BaseConnection::recv() (e.g. Player::LogoutComplete)
	* Added a lock in PollDefault::poll() to prevent reentrancy,
	  so we catch it sooner instead of hitting an assert()
	  in Dispatcher

Wednesday, August 28th, James Turner

	* Fix a bug (found by Simon) in Connection::gotData, introduced
	  by switching the lifetime of the underlying tcp_socket_stream. Basically
	  we weren't checking if the _stream existing prior to calling isReady.
	  If the meta-server is being used, and a connection object is created but
	  not connected, then this bug (a segfault occurs), since the Connection
	  is registered with the Poll instance and network activity can happen.
	  