@@ -4,7 +4,7 @@ dnl Information
 
 ERIS_MAJOR=0
 ERIS_MINOR=9
-ERIS_MICRO=6
+ERIS_MICRO=7
 ERIS_VERSION=$ERIS_MAJOR.$ERIS_MINOR.$ERIS_MICRO
 
 AC_SUBST(ERIS_VERSION)
